# rovis-vision

./: .gitignore  CMakeLists.txt  README.md  main.cpp
RoVi_Final_Project/: CMakeLists.txt  main.cpp
RoVi_Final_Project/SamplePluginPA10/: Source.cpp
RoVi_Final_Project/app/: marker_color.cpp  marker_thin_line.cpp  marker_thinline.cpp
Vision_mini_project/app/: Image1.cpp  Image3.cpp
Vision_mini_project/vis/: adaptiveNoiseReduction.cpp  histogram.cpp  median.cpp
app/: Image1.cpp  Image2.cpp  Image3.cpp  Image4_1.cpp  Image4_2.cpp  original.cpp
vis/: fft2d.cpp  histogram.cpp  intensityTransformations.cpp  median.cpp  rovis1.h  utils.cpp  vis.h
